--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;500&family=Poppins&display=swap');
 body{
     margin: 0;
-    height: 100vh;
+    height: 90vh;
     width: 100vw;
     
     font-size: 1.9rem;
@@ -19,6 +19,7 @@ body{
     color: #F0F4F6;
    
 }
+
 .nav h1{
     z-index: 1;
 }
@@ -30,7 +31,7 @@ body{
     position: absolute;
     right: 0;
     width: 100vw;
-    background-color: #060000af;
+    background-color: #060000;
 }
 
 .nav ul li {
@@ -78,7 +79,11 @@ body{
     /* box-shadow: 2px 2px 10px linear-gradient(#094781, #7c1111,#7c1111); */
     position: absolute;
     right: 20px;
-    
+    background: rgba( 255, 255, 255, 0.1 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4.5px );
+    -webkit-backdrop-filter: blur( 4.5px );
+    border-radius: 15%;
 }
 
 
@@ -101,6 +106,8 @@ input{
     outline: none;
     outline-color: #070f61;
     border-bottom: 3px solid black;
+    color: #ffffff;
+    font-size: 1.2rem;
     
     /* transform: translateX(-50px); */
     position: relative;
@@ -126,6 +133,23 @@ input::placeholder{
     color: rgb(98, 16, 31);
     transition: transform 0.3s ease-in-out;
 }
-button:hover{
+/* button:hover{
     transform: scale(0.999);
+} */
+footer{
+    background: #000000;
+}
+#contact ul{
+    display: flex;
+    justify-content: center;
+    color: #F0F4F6;
+
+}
+#contact ul li{
+    padding: 20px;
+    list-style: none;
+    display: inline-block;
+    text-align: center;
+
+    /* margin-right: 30px; */
 }
